refctorizando